--- a/src/index.html
+++ b/src/index.html
@@ -118,6 +118,7 @@
       .badge.SHF { background: #f3e8ff; color: #6b21a8; }
       .badge.LF { background: #e0e7ff; color: #3730a3; }
       .badge.WARC { background: #fef9c3; color: #854d0e; }
+      .badge.dxcc { background: #fef9c3; color: #734822; }
       .badge.QRP { background: #dcfce7; color: #166534; }
       .badge.Mobile { background: #ffedd5; color: #9a3412; }
       .badge.Portable { background: #ddd6fe; color: #5b21b6; }
@@ -214,6 +215,7 @@
         const marks = spot.marks || {};
         const freqBadges = (marks.freqMarks||[]).map(m => `<span class="badge ${safeText(m)}">${safeText(m)}</span>`).join('');
         const dxBadges = (marks.dxMarks||[]).map(m => `<span class="badge ${safeText(m)}">${safeText(m)}</span>`).join('');
+        const dxccBadge = spot.dxcc ? `<span class="badge dxcc">${safeText(spot.dxcc.primary)}</span>` : '';
         const modeBadges = (marks.modeMarks||[]).map(m => `<span class="badge ${safeText(m)}">${safeText(m)}</span>`).join('');
 
         const tr = document.createElement('tr');
@@ -223,7 +225,7 @@
         tr.innerHTML = `
           <td>${safeText(spot.de)}</td>
           <td>${safeText(spot.freq)}${modeBadges}${freqBadges}</td>
-          <td><strong>${safeText(spot.dx)}</strong>${dxBadges}</td>
+          <td><strong>${safeText(spot.dx)}</strong>${dxccBadge}${dxBadges}</td>
           <td class="muted">${safeText(spot.timeDisplay || spot.time)}</td>
           <td>${safeText(spot.comment)}</td>
         `;
